--- a/src/components/roll_panel.css
+++ b/src/components/roll_panel.css
@@ -1,3 +1,9 @@
+.roll-panel {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+}
+
 .roll-panel__title {
   color: var(--Gray-6, #f5f5f5);
   font-family: Inter;
@@ -5,6 +11,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  text-align: center;
 }
 .dice-section {
   display: flex;
@@ -38,7 +45,7 @@
 
 .dice-section__die-thread {
   display: flex;
-  width: 78px;
+  width: 72px;
 }
 
 .dice-section__die-thread-inner {
@@ -116,4 +123,20 @@
 }
 
 @media (max-width: 724px) {
+  .roll-panel {
+    position: absolute;
+    left: 0;
+  }
+
+  .roll-panel__mobile-inactive {
+    top: 100vh;
+  }
+
+  .roll-panel__mobile-active {
+    top: 0;
+    margin-top: 48px;
+    height: calc(100vh - 224px);
+    width: calc(100vw - 48px);
+    padding-bottom: 150px;
+  }
 }
