--- a/src/components/spend_bounty_points_panel.css
+++ b/src/components/spend_bounty_points_panel.css
@@ -1,3 +1,9 @@
+.spend-bounty-points-panel {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0;
+}
+
 .bounty-points-cart {
   display: flex;
   flex-direction: column;
@@ -25,4 +31,19 @@
   text-align: center;
   flex: 1 0 0;
   color: var(--blue-6);
+}
+
+@media (max-width: 724px) {
+  .spend-bounty-points-panel {
+    min-height: 200px;
+    max-height: 400px;
+  }
+
+  .bounty-points-cart {
+    max-height: 136px;
+    overflow-y: scroll;
+    margin: 16px 0;
+    border-bottom: 1px solid var(--blue-3);
+    border-top: 1px solid var(--blue-3);
+  }
 }
