Responsive work is at MVP stage! Always more to do, but all views work across all screens. Updated some menu behaviors to match mobile interaction patterns, and hid some panels during some interactions to make the best use of space.

--- a/src/components/character_view.css
+++ b/src/components/character_view.css
@@ -89,3 +89,10 @@
     width: unset;
   }
 }
+
+@media (max-width: 525px) {
+  .character-indicator__name-container {
+    flex-direction: column;
+    gap: 0px;
+  }
+}
