--- a/src/components/home_view.css
+++ b/src/components/home_view.css
@@ -1,3 +1,6 @@
+.home-view {
+  overflow: scroll;
+}
 .welcome-text {
   display: flex;
   margin: 74px auto;
@@ -47,11 +50,11 @@
 }
 
 .character-grid-inner {
-  margin: 0 auto;
-  max-width: 800px;
-  display: grid !important;
-  grid-template-columns: repeat(3, 1fr);
+  margin: 48px 80px;
   justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
 }
 
 .character-grid {
@@ -66,16 +69,14 @@
   font-family: Inter;
   font-style: normal;
   line-height: normal;
-
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 316px;
-  margin: 18px;
+  width: 20vw;
   border-radius: 4px;
-  overflow: hidden;
-
   padding: 8px;
+  max-width: 320px;
+  min-width: 200px;
 }
 
 .character-card:hover {
@@ -83,10 +84,10 @@
 }
 
 .character-card__character-image {
-  height: 300px;
   width: 100%;
   background-size: cover;
   border-radius: 4px;
+  aspect-ratio: 1;
 }
 
 .character-card__character-name {
