--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body {
   color: var(--Gray-6, #f5f5f5);
   background: var(--blue-0, #010914);
   overflow: hidden;
+  height: 100vh;
 }
 
 .hidden {
@@ -32,11 +33,11 @@ body {
 }
 
 .view {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   padding: env(safe-area-inset-top, 0) env(safe-area-inset-right, 0)
-    env(safe-area-inset-bottom, 0) env(safe-area-inset-left, 0);
+    env(safe-area-inset-bottom, 16px) env(safe-area-inset-left, 0);
+  height: 100%;
 }
 
 .panel {
