Mobile is now functional! Changed a few layout things to make it work, and added some configuration to make it easier to test locally on mobile.

--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -47,8 +47,8 @@
 @media (max-width: 525px) {
   .menu {
     position: fixed;
-    top: calc(100vh - 120px);
-    width: calc(100vw - 48px);
+    top: calc(100dvh - 120px);
+    width: calc(100dvw - 48px);
     left: 0;
     height: 120px;
     padding: 24px;
