--- a/src/components/chip_counters_container.css
+++ b/src/components/chip_counters_container.css
@@ -5,3 +5,9 @@
   background: var(--blue-1);
   border-radius: 4px;
 }
+
+/* @media (max-width: 525px) {
+  .chip-counters-container {
+    margin-bottom: env(safe-area-inset-bottom, 160px);
+  }
+} */
