--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,8 @@ body {
   color: var(--Gray-6, #f5f5f5);
   background: var(--blue-0, #010914);
   overflow: hidden;
+  padding: env(safe-area-inset-top, 0) env(safe-area-inset-right, 0)
+    env(safe-area-inset-bottom, 16px) env(safe-area-inset-left, 0);
 }
 
 .hidden {
@@ -34,9 +36,7 @@ body {
 .view {
   display: flex;
   flex-direction: column;
-  padding: env(safe-area-inset-top, 0) env(safe-area-inset-right, 0)
-    env(safe-area-inset-bottom, 16px) env(safe-area-inset-left, 0);
-  height: 100vh;
+  height: 100dvh;
 }
 
 .panel {
